Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -3,3 +3,4 @@
   * [http://code.google.com/p/jspackcrx/ Project Home]
   * [http://code.google.com/p/jspackcrx/w/list Wiki Pages]
     * [Documentation]
+  * [http://code.google.com/p/jspackcrx/source/browse/ Browse Source]
