--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -2,9 +2,8 @@
 
 
 = Documentation =
-*This documentation is subject to change. Drastically and unexpectedly. At any time.*
 
-*This is only documentation so that I can build the product on it. Don't think any of this is implemented.*
+This stuff is outdated.
 
 
 == Embedding the script ==
